[gd_scene load_steps=8 format=3 uid="uid://bugyx4aun73x6"]

[ext_resource type="PackedScene" uid="uid://bkyjn37rbc7hs" path="res://Scenes/player.tscn" id="1_4681p"]
[ext_resource type="Script" path="res://Scripts/base.gd" id="1_sur2h"]
[ext_resource type="PackedScene" uid="uid://dmkgdc6vx2vpt" path="res://Scenes/base_map.tscn" id="2_gji64"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_os0pf"]
size = Vector2(57, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nv4uc"]
size = Vector2(100, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_topua"]
size = Vector2(63, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iynat"]
size = Vector2(62, 55)

[node name="Base" type="Node2D"]
script = ExtResource("1_sur2h")

[node name="StaticBody2D" parent="." instance=ExtResource("2_gji64")]
position = Vector2(-2, -136)

[node name="Drill" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drill"]
position = Vector2(-196.5, -223.5)
shape = SubResource("RectangleShape2D_os0pf")

[node name="ColorRect" type="ColorRect" parent="Drill"]
visible = false
offset_left = -224.0
offset_top = -255.0
offset_right = -178.0
offset_bottom = -207.0

[node name="Drill Menu" type="CanvasLayer" parent="Drill"]
visible = false

[node name="ColorRect" type="ColorRect" parent="Drill/Drill Menu"]
offset_left = 93.0
offset_top = 38.0
offset_right = 1110.0
offset_bottom = 560.0
color = Color(0.54099, 0.54099, 0.54099, 1)

[node name="ColorRect2" type="ColorRect" parent="Drill/Drill Menu"]
offset_left = 500.0
offset_top = 201.0
offset_right = 652.0
offset_bottom = 334.0

[node name="Label" type="Label" parent="Drill/Drill Menu"]
offset_left = 533.0
offset_top = 246.0
offset_right = 621.0
offset_bottom = 269.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Oil Amount"

[node name="ColorRect3" type="ColorRect" parent="Drill/Drill Menu"]
offset_left = 108.0
offset_top = 89.0
offset_right = 206.0
offset_bottom = 270.0

[node name="Label2" type="Label" parent="Drill/Drill Menu"]
offset_left = 109.0
offset_top = 107.0
offset_right = 197.0
offset_bottom = 156.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Battery
Slot"
horizontal_alignment = 1

[node name="ColorRect4" type="ColorRect" parent="Drill/Drill Menu"]
offset_left = 938.0
offset_top = 79.0
offset_right = 1036.0
offset_bottom = 260.0

[node name="Label3" type="Label" parent="Drill/Drill Menu"]
offset_left = 942.0
offset_top = 96.0
offset_right = 1030.0
offset_bottom = 145.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Battery
Slot"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Drill/Drill Menu"]
offset_left = 543.0
offset_top = 363.0
offset_right = 604.0
offset_bottom = 394.0
text = "Collect
"

[node name="Button2" type="Button" parent="Drill/Drill Menu"]
offset_left = 1050.0
offset_top = 46.0
offset_right = 1100.0
offset_bottom = 77.0
text = "Close"

[node name="CellConverter" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CellConverter"]
position = Vector2(-10, -230.5)
shape = SubResource("RectangleShape2D_nv4uc")

[node name="ColorRect" type="ColorRect" parent="CellConverter"]
visible = false
offset_left = -49.0
offset_top = -254.0
offset_right = 30.0
offset_bottom = -223.0

[node name="CellMenu" type="CanvasLayer" parent="CellConverter"]
visible = false

[node name="ColorRect" type="ColorRect" parent="CellConverter/CellMenu"]
offset_left = 95.0
offset_top = 24.0
offset_right = 1109.0
offset_bottom = 555.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="ColorRect2" type="ColorRect" parent="CellConverter/CellMenu"]
offset_left = 384.0
offset_top = 63.0
offset_right = 481.0
offset_bottom = 158.0

[node name="ColorRect5" type="ColorRect" parent="CellConverter/CellMenu"]
offset_left = 846.0
offset_top = 324.0
offset_right = 943.0
offset_bottom = 419.0

[node name="ColorRect3" type="ColorRect" parent="CellConverter/CellMenu"]
offset_left = 635.0
offset_top = 65.0
offset_right = 732.0
offset_bottom = 160.0

[node name="ColorRect4" type="ColorRect" parent="CellConverter/CellMenu"]
offset_left = 123.0
offset_top = 201.0
offset_right = 426.0
offset_bottom = 541.0

[node name="ColorRect6" type="ColorRect" parent="CellConverter/CellMenu"]
offset_left = 580.0
offset_top = 236.0
offset_right = 813.0
offset_bottom = 527.0

[node name="ColorRect7" type="ColorRect" parent="CellConverter/CellMenu"]
offset_left = 955.0
offset_top = 214.0
offset_right = 1005.0
offset_bottom = 515.0

[node name="ColorRect8" type="ColorRect" parent="CellConverter/CellMenu"]
offset_left = 1038.0
offset_top = 217.0
offset_right = 1084.0
offset_bottom = 521.0

[node name="Line2D" type="Line2D" parent="CellConverter/CellMenu"]
points = PackedVector2Array(405, 390, 534, 390, 539, 218, 898, 216, 894, 386)

[node name="Line2D2" type="Line2D" parent="CellConverter/CellMenu"]
points = PackedVector2Array(449, 107, 566, 103, 681, 101, 564, 103, 536, 258)

[node name="Label" type="Label" parent="CellConverter/CellMenu"]
offset_left = 389.0
offset_top = 89.0
offset_right = 471.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Power Cell"

[node name="Label2" type="Label" parent="CellConverter/CellMenu"]
offset_left = 667.0
offset_top = 89.0
offset_right = 749.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "oil"

[node name="Label3" type="Label" parent="CellConverter/CellMenu"]
offset_left = 956.0
offset_top = 523.0
offset_right = 1038.0
offset_bottom = 546.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Power"

[node name="Label4" type="Label" parent="CellConverter/CellMenu"]
offset_left = 1028.0
offset_top = 526.0
offset_right = 1110.0
offset_bottom = 549.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Radiation"

[node name="Label5" type="Label" parent="CellConverter/CellMenu"]
offset_left = 852.0
offset_top = 345.0
offset_right = 934.0
offset_bottom = 368.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Finished
Cell"

[node name="Label6" type="Label" parent="CellConverter/CellMenu"]
offset_left = 661.0
offset_top = 379.0
offset_right = 743.0
offset_bottom = 428.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Cell Properties"

[node name="Label7" type="Label" parent="CellConverter/CellMenu"]
offset_left = 201.0
offset_top = 341.0
offset_right = 354.0
offset_bottom = 390.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Components to add"

[node name="Button" type="Button" parent="CellConverter/CellMenu"]
anchors_preset = -1
anchor_right = 0.027
anchor_bottom = 0.042
offset_left = 444.0
offset_top = 476.0
offset_right = 475.896
offset_bottom = 484.784
text = "Fuze"

[node name="Button2" type="Button" parent="CellConverter/CellMenu"]
anchors_preset = -1
anchor_right = 0.027
anchor_bottom = 0.042
offset_left = 1029.0
offset_top = 36.0
offset_right = 1060.9
offset_bottom = 44.784
text = "Close"

[node name="Refiner" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Refiner"]
position = Vector2(166.5, -206.5)
shape = SubResource("RectangleShape2D_topua")

[node name="ColorRect" type="ColorRect" parent="Refiner"]
visible = false
offset_left = 142.0
offset_top = -223.0
offset_right = 190.0
offset_bottom = -191.0

[node name="RefineMenu" type="CanvasLayer" parent="Refiner"]
visible = false

[node name="ColorRect" type="ColorRect" parent="Refiner/RefineMenu"]
offset_left = 92.0
offset_top = 27.0
offset_right = 1118.0
offset_bottom = 561.0
color = Color(0.577008, 0.577008, 0.577008, 1)

[node name="ColorRect2" type="ColorRect" parent="Refiner/RefineMenu"]
offset_left = 493.0
offset_top = 113.0
offset_right = 654.0
offset_bottom = 244.0

[node name="ColorRect6" type="ColorRect" parent="Refiner/RefineMenu"]
offset_left = 148.0
offset_top = 96.0
offset_right = 252.0
offset_bottom = 308.0

[node name="ColorRect7" type="ColorRect" parent="Refiner/RefineMenu"]
offset_left = 871.0
offset_top = 90.0
offset_right = 975.0
offset_bottom = 302.0

[node name="ColorRect3" type="ColorRect" parent="Refiner/RefineMenu"]
offset_left = 490.0
offset_top = 358.0
offset_right = 651.0
offset_bottom = 489.0

[node name="ColorRect4" type="ColorRect" parent="Refiner/RefineMenu"]
offset_left = 292.0
offset_top = 353.0
offset_right = 453.0
offset_bottom = 484.0

[node name="ColorRect5" type="ColorRect" parent="Refiner/RefineMenu"]
offset_left = 699.0
offset_top = 360.0
offset_right = 860.0
offset_bottom = 491.0

[node name="Line2D" type="Line2D" parent="Refiner/RefineMenu"]
points = PackedVector2Array(570, 195, 568, 352, 520, 314, 607, 314, 568, 352)

[node name="Label" type="Label" parent="Refiner/RefineMenu"]
offset_left = 512.0
offset_top = 143.0
offset_right = 632.0
offset_bottom = 166.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Raw Alien Parts"

[node name="Label2" type="Label" parent="Refiner/RefineMenu"]
offset_left = 151.0
offset_top = 169.0
offset_right = 271.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Battery Slot"

[node name="Label3" type="Label" parent="Refiner/RefineMenu"]
offset_left = 878.0
offset_top = 160.0
offset_right = 998.0
offset_bottom = 183.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Battery Slot"

[node name="Button" type="Button" parent="Refiner/RefineMenu"]
offset_left = 532.0
offset_top = 268.0
offset_right = 600.0
offset_bottom = 299.0
text = "Process"

[node name="Button2" type="Button" parent="Refiner/RefineMenu"]
offset_left = 538.0
offset_top = 516.0
offset_right = 606.0
offset_bottom = 547.0
text = "Collect"

[node name="Refine Close" type="Button" parent="Refiner/RefineMenu"]
offset_left = 1029.0
offset_top = 44.0
offset_right = 1097.0
offset_bottom = 75.0
text = "Close"

[node name="Crafting" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Crafting"]
position = Vector2(166, -126.5)
shape = SubResource("RectangleShape2D_iynat")

[node name="ColorRect" type="ColorRect" parent="Crafting"]
visible = false
offset_left = 143.0
offset_top = -142.0
offset_right = 191.0
offset_bottom = -110.0

[node name="CraftingMenu" type="CanvasLayer" parent="Crafting"]
visible = false

[node name="ColorRect" type="ColorRect" parent="Crafting/CraftingMenu"]
offset_left = 87.0
offset_top = 27.0
offset_right = 1133.0
offset_bottom = 556.0
color = Color(0.617455, 0.617455, 0.617455, 1)

[node name="ColorRect2" type="ColorRect" parent="Crafting/CraftingMenu"]
offset_left = 253.0
offset_top = 68.0
offset_right = 893.0
offset_bottom = 174.0

[node name="ColorRect3" type="ColorRect" parent="Crafting/CraftingMenu"]
offset_left = 261.0
offset_top = 202.0
offset_right = 901.0
offset_bottom = 308.0

[node name="ColorRect4" type="ColorRect" parent="Crafting/CraftingMenu"]
offset_left = 105.0
offset_top = 326.0
offset_right = 439.0
offset_bottom = 540.0

[node name="ColorRect5" type="ColorRect" parent="Crafting/CraftingMenu"]
offset_left = 726.0
offset_top = 326.0
offset_right = 1060.0
offset_bottom = 540.0

[node name="Label" type="Label" parent="Crafting/CraftingMenu"]
offset_left = 513.0
offset_top = 111.0
offset_right = 637.0
offset_bottom = 134.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Craft Power Cell"

[node name="Label2" type="Label" parent="Crafting/CraftingMenu"]
offset_left = 477.0
offset_top = 241.0
offset_right = 673.0
offset_bottom = 264.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Craft Repair Components"

[node name="Label3" type="Label" parent="Crafting/CraftingMenu"]
offset_left = 203.0
offset_top = 417.0
offset_right = 399.0
offset_bottom = 440.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Using"

[node name="Label4" type="Label" parent="Crafting/CraftingMenu"]
offset_left = 866.0
offset_top = 426.0
offset_right = 1062.0
offset_bottom = 449.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Getting"

[node name="Line2D" type="Line2D" parent="Crafting/CraftingMenu"]
position = Vector2(23, -28)
points = PackedVector2Array(301, 465, 439, 463, 694, 461, 647, 412, 639, 505, 694, 461)

[node name="Button" type="Button" parent="Crafting/CraftingMenu"]
offset_left = 540.0
offset_top = 515.0
offset_right = 587.0
offset_bottom = 546.0
text = "Craft"

[node name="Close crafting" type="Button" parent="Crafting/CraftingMenu"]
offset_left = 1063.0
offset_top = 39.0
offset_right = 1113.0
offset_bottom = 70.0
text = "Close"

[node name="Player" parent="." instance=ExtResource("1_4681p")]

[node name="Camera2D2" type="Camera2D" parent="Player"]
zoom = Vector2(3, 3)
limit_left = -255
limit_top = -270
limit_right = 240
limit_bottom = 30
editor_draw_limits = true

[connection signal="body_entered" from="Drill" to="." method="_on_drill_body_entered"]
[connection signal="body_exited" from="Drill" to="." method="_on_drill_body_exited"]
[connection signal="pressed" from="Drill/Drill Menu/Button2" to="." method="_on_button_2_pressed"]
[connection signal="body_entered" from="CellConverter" to="." method="_on_cell_converter_body_entered"]
[connection signal="body_exited" from="CellConverter" to="." method="_on_cell_converter_body_exited"]
[connection signal="pressed" from="CellConverter/CellMenu/Button2" to="." method="_on_cell_close_pressed"]
[connection signal="body_entered" from="Refiner" to="." method="_on_refiner_body_entered"]
[connection signal="body_exited" from="Refiner" to="." method="_on_refiner_body_exited"]
[connection signal="pressed" from="Refiner/RefineMenu/Refine Close" to="." method="_on_refine_close_pressed"]
[connection signal="body_entered" from="Crafting" to="." method="_on_crafting_body_entered"]
[connection signal="body_exited" from="Crafting" to="." method="_on_crafting_body_exited"]
[connection signal="pressed" from="Crafting/CraftingMenu/Close crafting" to="." method="_on_close_crafting_pressed"]
